[project]
name = "pollinations"
description = "Generate images from text prompts using Pollinations' AI models for free."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/ciga2011/ComfyUI-Pollinations"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ciga2011"
DisplayName = "ComfyUI-Pollinations"
Icon = "https://raw.githubusercontent.com/ciga2011/ComfyUI-Pollinations/main/icon256.png"
